--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
   <link type="image/png" sizes="32x32" rel="icon" href="icons8-world-32.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#0F0F0F" />
   <title>Matt Withey Portfolio</title>
 </head>
 
